RESOLVED FIXED77117
ASSERT(!m_overlay) reached in TapHighlightController.cpp:73
https://bugs.webkit.org/show_bug.cgi?id=77117
Summary ASSERT(!m_overlay) reached in TapHighlightController.cpp:73
Andras Becsi
Reported 2012-01-26 10:33:50 PST
The PageOverlay does only get uninstalled after the fade-out animation finishes, so do not assert on !m_overlay after the uninstallPageOverlay(m_overlay, /* fadeout */ true) call.
Attachments
proposed patch (1.31 KB, patch)
2012-01-26 10:35 PST, Andras Becsi
no flags
proposed patch with bug number (1.36 KB, patch)
2012-01-26 10:40 PST, Andras Becsi
no flags
Andras Becsi
Comment 1 2012-01-26 10:35:15 PST
Created attachment 124140 [details] proposed patch
WebKit Review Bot
Comment 2 2012-01-26 10:36:47 PST
Attachment 124140 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit2/ChangeLog', u'Source/WebKit..." exit_code: 1 Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 1 files If any of these errors are false positives, please file a bug against check-webkit-style.
Andras Becsi
Comment 3 2012-01-26 10:40:15 PST
Created attachment 124142 [details] proposed patch with bug number
Andras Becsi
Comment 4 2012-01-26 10:47:05 PST
Comment on attachment 124142 [details] proposed patch with bug number Clearing flags on attachment: 124142 Committed r106012: <http://trac.webkit.org/changeset/106012>
Andras Becsi
Comment 5 2012-01-26 10:47:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.