ASSERT(!m_overlay) reached in TapHighlightController.cpp:73 https://bugs.webkit.org/show_bug.cgi?id=77117

Reviewed by Tor Arne Vestbø.

The PageOverlay does only get uninstalled after the fade-out animation finishes,
so do not assert on !m_overlay after the uninstallPageOverlay call.

* WebProcess/WebPage/TapHighlightController.cpp:
(WebKit::TapHighlightController::hideHighlight):

Canonical link: https://commits.webkit.org/94000@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106012 268f45cc-cd09-0410-ab3c-d52691b4dbfc